more validator references removed

--- a/docs/solana/migration/hotspot-owner.mdx
+++ b/docs/solana/migration/hotspot-owner.mdx
@@ -40,9 +40,8 @@ of your Hotspots.
 - Hotspots will move to the new Solana blockchain, specifically performing off-chain
   Proof-of-Coverage. More information on off-chain PoC can be found in
   [HIP-70](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md#implementing-proof-of-coverage-oracles).
-- Makers will push a fleet-wide update to all their Hotspots that switches a Hotspot from receiving
-  Challenges from Validators to automatically beaconing by themselves every 6 hours and sending
-  results to an Off-Chain Oracle.
+- Makers will push a fleet-wide update to all their Hotspots that switches a Hotspot to
+  automatically beaconing by themselves every 6 hours and sending results to an Off-Chain Oracle.
 - Makers must push this mandatory update to their fleet of Hotspots. Failure to do so will mean
   their customers cease to mine and stop earning rewards once the blockchain migration is complete.
 
