--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -15,7 +15,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 Coverage provides visibility for Hotspots that transfer device packets as well as the status of
 those Hotspots within Console.
 
-:::info To learn more about Coverage in Console, check out our Tips & Tricks video
+:::info
+
+To learn more about Coverage in Console, check out our Tips & Tricks video
 [here](https://youtu.be/Woh4RooY6L8).
 
 :::
