--- a/docs/use-the-network/run-a-network-server/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console.mdx
@@ -336,6 +336,6 @@ manager. An alternative is to copy the file somewhere safe.
 
 #### A Note on the Purpose of a `swarm_key`
 
-The `swarm_key` equates to your validator's unique identity on the Helium blockchain. Backing up the
-`swarm_key` enables you to maintain your router's identity in the event that your node becomes
-compromised in some way, or needs to be rebuilt on another server for any reason.
+The `swarm_key` equates to your unique identity on the Helium blockchain. Backing up the `swarm_key`
+enables you to maintain your router's identity in the event that your node becomes compromised in
+some way, or needs to be rebuilt on another server for any reason.
