--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -77,7 +77,6 @@ SUBCOMMANDS:
     sign          Commands for signing or verifying data
     upgrade       Upgrade a wallet to the latest supported version of the given format. The same password is used to
                   decrypt the old and encrypt the new wallet
-    validators    Commands for validators
     vars          Commands for chain variables
     verify        Verify an encypted wallet
 
@@ -142,7 +141,7 @@ OPTIONS:
         --key-type <key-type>    The type of key to generate (ecc_compact/ed25519) [default: ed25519]
         --network <network>      The network to generate the wallet (testnet/mainnet) [default: mainnet]
     -o, --output <output>        Output file to store the key in [default: wallet.key]
-        --swarm <swarm>          Import a swarm_key file from a miner, gateway, validator, or other blockchain actor
+        --swarm <swarm>          Import a swarm_key file from a miner, gateway, or other blockchain actor
 ```
 
 We'll go through a few examples next.
