--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -81,7 +81,7 @@ you can import it into the Wallet app.
 Wallets created with the Helium Wallet app are generated with a 24-word seed phrase. These 24 words
 in correct order are the only way to access the wallet, and can never be recovered if lost. **They
 should never be shared**, as whoever has them is considered the owner of all Tokens, Hotspots, or
-Validators. Anyone asking for them is guaranteed to be a scammer.
+NFTs. Anyone asking for them is guaranteed to be a scammer.
 
 **Taking and storing screenshots of the seed words is not recommended, as it is not a** secure way
 to store them. Screenshots and photos stored or backed up in the cloud can easily be hacked and
@@ -151,14 +151,14 @@ the Helium blockchain.
 
 <img src={useBaseUrl('img/wallets/helium-wallet-app/filters.png')} />
 
-|        Filter         | Description                                                                                                                                                                                                                                                                                |
-| :-------------------: | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-|   All Transactions    | Shows all interactions with the blockchain.                                                                                                                                                                                                                                                |
-|    Mining Rewards     | Shows the mining rewards the wallet has earned from any included Hotspot or Validator.                                                                                                                                                                                                     |
-|       Payments        | Lists all payments that were either sent or received.                                                                                                                                                                                                                                      |
-| Hotspots & Validators | Lists the Hotspots/Validators associated with the wallet. Note that any interactions with the Hotspots, such as diagnostics and asserting location, etc, will need to be done from the Maker app. This list is for reference only as Hotspot actions are not available in this wallet app. |
-|   Burn Transactions   | Lists Token Burn Transactions. (i.e. Data Credits burned to vote on a HIP)                                                                                                                                                                                                                 |
-| Pending Transactions  | Lists any transactions that have been submitted, but have not yet been validated/cleared on the blockchain.                                                                                                                                                                                |
+|        Filter        | Description                                                                                                                                                                                                                                                                     |
+| :------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+|   All Transactions   | Shows all interactions with the blockchain.                                                                                                                                                                                                                                     |
+|    Mining Rewards    | Shows the mining rewards the wallet has earned from any included Hotspot.                                                                                                                                                                                                       |
+|       Payments       | Lists all payments that were either sent or received.                                                                                                                                                                                                                           |
+|       Hotspots       | Lists the Hotspots associated with the wallet. Note that any interactions with the Hotspots, such as diagnostics and asserting location, etc, will need to be done from the Maker app. This list is for reference only as Hotspot actions are not available in this wallet app. |
+|  Burn Transactions   | Lists Token Burn Transactions. (i.e. Data Credits burned to vote on a HIP)                                                                                                                                                                                                      |
+| Pending Transactions | Lists any transactions that have been submitted, but have not yet been validated/cleared on the blockchain.                                                                                                                                                                     |
 
 ## Address Book And Contacts
 
