--- a/docs/hotspot-makers/light-hotspots.mdx
+++ b/docs/hotspot-makers/light-hotspots.mdx
@@ -35,11 +35,6 @@ Since the genesis block, the Helium blockchain has run entirely on the physical 
 the blockchain network grows, each Hotspot running a full node undergoes increasing load and are
 starting to fall out of sync due to the higher compute requirements.
 
-Before the introduction of [HIP 70](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md),
-the goal was to move Challenge creation and Consensus work to Validators. Since HIP-70 and the
-introduction of Off-Chain PoC Oracles, the definition of Light Hotspot and what it will do has
-changed. Please read on for detailed changes and timelines.
-
 ## Light Hotspot Properties [Updated]
 
 When the Light Hotspot software is fully developed and in production, they will satisfy the
@@ -66,8 +61,6 @@ move the blockchain off the Hotspots and Proof-of-Coverage receipts to an Oracle
 of Light Hotspot development, the entire Helium blockchain will be removed from Hotspots, Hotspots
 will Beacon on their own without external input, and all data transfer and Proof-of-Coverage
 receipts will go to Off-Chain Oracles.
-
-<img className="docsheader" src={useBaseUrl('img/mine-hnt/validator-hotspot-dev.jpg')} />
 
 ### HIP-70 Changes
 
@@ -116,20 +109,17 @@ Oracle work can be found at the [Oracles](https://github.com/helium/oracles) rep
 # Development Timelines
 
 - **March 18 2021**: Data Only Hotspots routes free packets
-- **July 8 2021**: Hotspot Consensus work moves to Validators
 - **July 20 2021**: Data Only Hotspots activated on Helium Network (appears on chain)
 - **October 11 2021**: Data Only Hotspots mine HNT
-- **December 2021**: Validators creating challenges for software-based miners on Testnet
 - **January 2022**: Hardware Audit starts for Light Hotspot manufacturers
 - **February 2022**: Introduce hardware-based Hotspots on Testnet (Full Hotspots running Light
-  Hotspot firmware). Validators create challenges using H3dex targeting.
+  Hotspot firmware).
 - **February 22 2022**:
   [HIP 54](https://heliumvote.com/14me3X7jpEmn3eeFfnAkMvUoFU3cN6GAS3CDomqCikr7VQfHWrU) and
   [HIP 55](https://heliumvote.com/14Rjhhz1DXLVmSRdzappqWgD6rfgu6XYxmdaSCvWLyLH8ZWbciK) passes
 - **February 2022**: HIP-19 Approved Makers participating in Testnet
 - **~~April 6 2022~~** **April 13**: Code related to Light Hotspot merged to production, in an
-  inactive state. Light Hotspot software update tagged for Makers to upgrade their fleet. Validators
-  will also receive a mandatory software update.
+  inactive state. Light Hotspot software update tagged for Makers to upgrade their fleet.
 - **~~April 19 2022~~** **May 11**: Activate set of chain variables to enable Light Hotspots on
   Mainnet
 - **September 2022**:
