--- a/docs/hotspot-makers/light-hotspots.mdx
+++ b/docs/hotspot-makers/light-hotspots.mdx
@@ -154,4 +154,4 @@ Oracle work can be found at the [Oracles](https://github.com/helium/oracles) rep
 - **~October 2022**: HIP-70 passed
 - **~April 2023**: Light Hotspots are completed and the decision is made to call Light Hotspots simply Hotspots.*
 
-*With the completion of moving from Miner to Gateway-rs, we've simplified hotspots by removing the terms “Full” and “Light”. All hotspots will be called “hotspots”, "data only hotspots", "Mobile hotspots".
+*With the completion of moving from Miner to Gateway-rs, we've simplified hotspots by removing the terms “Full” and “Light”. All hotspots will be called “hotspots” and "data only hotspots". MOBILE network has one or more "radios" which is attached to a "hotspot", or (future) a single "radio" which is attached to a "Mobile WiFi hotspot" 
