--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
@@ -15,20 +15,19 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 This guide is intended for companies that have been approved via HIP-19 and successfully passed the
 hardware audit stage.
 
-(New) By March 1, 2022, all Makers and prospective makers are required to develop, and make
+All Makers and prospective makers are required to develop, and make
 available to their customers, their own mobile app. This allows Makers to create new and
 differentiating features for their customers and Hotspots. Examples can include detailed diagnostics
 reports, notifications of status changes, peer address reporting, Proof-of-Coverage tips and
 improvements, and better troubleshooting and customer support access.
 
-**Makers actively going through the HIP-19 process can continue to use the Helium app but are
-expected to develop their own Maker app by March 1, 2022.**
+**Makers are expected to develop their own Maker app**
 
-To make the transition easier, a [Maker Starter App](https://github.com/helium/maker-starter-app) is
+To make development easier, a [Maker Starter App](https://github.com/helium/maker-starter-app) is
 available for anyone to fork and modify.
 
-The Helium app will continue to support HNT / Wallet functions, such as sending payments, receiving
-payments, and burn HNT.
+The Blue Helium app will continue to support HNT / Wallet functions, such as sending payments, receiving
+payments, and burn HNT. It will also continue to support the original Helium hotspots.
 
 ## Starter App features
 
@@ -156,7 +155,7 @@ miner txn add_gateway owner=WALLET_ADDRESS --payer WALLET_ADDRESS
 
 For testing, you'll set `payer` as `payer = 138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr`. In
 production, the Payer will be your unique Maker Account Address and will be provided at the
-appropriate stage with the Manufacturing Oversight Committee. The current list can be found
+appropriate stage with the Manufacturing Compliance Committee. The current list can be found
 [here](https://onboarding.dewi.org/api/v2/makers).
 
 When testing with this `payer` address, adding hotspots and asserting location transactions will be
@@ -200,8 +199,7 @@ own maker address.
 
 :::warning
 
-Only request a Maker Account from your Helium Foundation contact if you have passed the Hardware
-Audit and Certification stages.
+Only request a Maker Account from your Helium Foundation contact if you have been approved by the Manufacturing Compliance Committee (MCC).
 
 :::
 
