restore files from feedback

--- a/docs/api/blockchain/stats.mdx
+++ b/docs/api/blockchain/stats.mdx
@@ -70,6 +70,7 @@ _No Parameters_
       "last_day": 33084
     },
     "counts": {
+      "validators": 2145,
       "ouis": 13,
       "hotspots_dataonly": 64,
       "blocks": 644074,
