--- a/docs/blockchain/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives.mdx
@@ -31,64 +31,7 @@ The easiest way to see the blocks being mined is with the
 [Helium Mobile App](https://helium.com/app) also shows block details. Developers can also use the
 Helium blockchain API to access all blockchain transactions and metadata.
 
-<!--TODO: document epochs on soland and in helium rewards -->
-
-### Transactions
-
-The Helium blockchain currently has 36 native transaction types. Some appear in nearly every block
-mined while others were created to be used only once and will never be heard from again.
-
-You can see various transaction types in action using the
-[Helium Blockchain Explorer](https://explorer.helium.com/). At a low level, transactions are
-represented as [Protocol Buffers](https://developers.google.com/protocol-buffers), aka "protobuf".
-To sign a transaction, other signature fields (if present) are cleared and the serialized protobuf
-is signed by the actor.
-[The protobuf definitions are available here](https://github.com/helium/proto).
-
-All transactions occur on-chain, and all transactions require Helium Data Credits (DCs) to be
-submitted and confirmed. The following is a list of the supported transactions:
-
-- `add gateway` - Add a new gateway to the Helium Network. For the purposes of transactions, a
-  “gateway” is the term for a Helium-compliant Miner that is mining and providing coverage.
-- `assert location` - Assert a gateway’s location on the Helium Network. This happens after a
-  gateway has been added via the add gateway transaction. Once asserted, this location is then used
-  as part of Proof of Coverage (PoC) challenges. A Miner’s location can be asserted more than once
-  but each subsequent assertion will cost a fee.
-- `chain vars` - Change a chain variable.
-- `coinbase` - Similar to the bitcoin blockchain’s coinbase transaction but used only during testnet
-  phases of the Helium blockchain. The `rewards` transaction has taken its place.
-- `coinbase data credits` - Created the initial 10,000 DCs required to bring the first group of
-  Miners online.
-- `consensus group` - Marks the election of a new consensus group, responsible for mining during the
-  next epoch.
-- `create hashed timelock` - Creates a transaction that can only be redeemed by providing the
-  correct pre-image to the hashlock within the specified timelock.
-- `data credits` - Burn HNT for DCs at the current oracle price and deliver them to the target
-  wallet address.
-- `genesis gateway` - Used to define the initial group of Miners that bootstrapped the blockchain.
-- `multi-payment` - Used to send $HNT from one wallet to multiple wallets.
-- `OUI` - Create an Organization Unique Identifier (OUI) for a new router on the Helium network. In
-  the Helium blockchain, Miners forward packets to Routers that own them based on their OUI as
-  stored in the blockchain.
-- `payment` - Used to send $HNT from one wallet to another.
-- `proof of coverage receipts` - The result of a PoC submitted to the network upon completion.
-- `redeem hashed timelock` - Redeem the transaction created using the `create hashed timelock`
-  transaction.
-- `reward` - A token payout for a specific event on the network such as submitting a valid proof of
-  coverage request, participating in a consensus group, etc.
-- `rewards` - Bundles multiple reward transactions at the end of each epoch and distributes all $HNT
-  produced in that block to wallets that have earned them.
-- `routing` - Update the routing information associated with an OUI.
-- `security coinbase` - Distribution of security tokens in the genesis block.
-- `security exchange` - The transfer of security tokens from one address to another.
-- `state channel open` - Opens a new state channel on a Helium Router.
-- `state channel close` - Closes a specific state channel on a Helium Router.
-- `token burn exchange rate` - Change the exchange rate for burning $HNT to DCs.
-
-**Extended Reading on Transactions**
-
-- [Helium Blockchain Core on GitHub](https://github.com/helium/blockchain-core)
-- [Transaction protobuf definitions on GitHub](https://github.com/helium/proto)
+<!--TODO: document epochs on Solana and in Helium rewards -->
 
 ### Chain Variables
 
