update explorer to explorer-old domain

--- a/devblog/2020-12-09-blockchain-release-hip-17/index.mdx
+++ b/devblog/2020-12-09-blockchain-release-hip-17/index.mdx
@@ -130,4 +130,4 @@ our next steps.~~
 
 We activated the HIP17 and HIP15 chain variables on Wednesday, December 16th, 2020 at 10AM PST.
 Activation Transaction can be found on
-[Helium Explorer](https://explorer.helium.com/txns/vnEqwbKtFfFxXgYI_9L5Th0LRVkpJlsX-sQzZTh2VwY).
+[Helium Explorer](https://explorer-old.helium.com/txns/vnEqwbKtFfFxXgYI_9L5Th0LRVkpJlsX-sQzZTh2VwY).
