--- a/devblog/2021-05-12-app-version-313.mdx
+++ b/devblog/2021-05-12-app-version-313.mdx
@@ -14,7 +14,7 @@ authors: [cokes518]
 
 Hotspots that are relayed through other Hotspots on the network may experience syncing or reduced
 mining rewards. We now surface that up to the user in the app (already exists on
-explorer.helium.com).
+explorer-old.helium.com).
 
 <!--truncate-->
 
