--- a/docs/blockchain/packet-purchasing.mdx
+++ b/docs/blockchain/packet-purchasing.mdx
@@ -34,11 +34,11 @@ is that
 may open and close state channels on behalf of an OUI.
 
 For example,
-[this account](https://explorer.helium.com/accounts/13tyMLKRFYURNBQqLSqNJg9k41maP1A7Bh8QYxR13oWv7EnFooc)
-[purchased the first OUI](https://explorer.helium.com/txns/6ACW9A5Hj3KDnOJELWAvAVG3yM71OpNAYpdAPM3ti1A)
+[this account](https://explorer-old.helium.com/accounts/13tyMLKRFYURNBQqLSqNJg9k41maP1A7Bh8QYxR13oWv7EnFooc)
+[purchased the first OUI](https://explorer-old.helium.com/txns/6ACW9A5Hj3KDnOJELWAvAVG3yM71OpNAYpdAPM3ti1A)
 on the Helium Blockchain. The address `112qB3YaH5bZkCnKA5uRH7tBtGNv2Y5B4smv1jsmvGUzgKT71QpE`
 operates the OUI on behalf of the owner. You can monitor its activity
-[here](https://explorer.helium.com/accounts/14oSuAgRmAFPFPZRY1MUwir5AJSLGkaXHzuSZJ92BuYCfLMN1Et).
+[here](https://explorer-old.helium.com/accounts/14oSuAgRmAFPFPZRY1MUwir5AJSLGkaXHzuSZJ92BuYCfLMN1Et).
 
 OUIs are purchased (see current
 [fee schedule](/blockchain/transaction-fees#transaction-fee-schedule)) and numbered in incrementing
