--- a/docs/blockchain/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage.mdx
@@ -37,9 +37,9 @@ provided by Hotspots on the Network.
 ## Oracled Proof-of-Coverage
 
 - Oracled Proof of Coverage ChainVar was set in
-  [block 1,731,335](https://explorer.helium.com/blocks/1731335).
+  [block 1,731,335](https://explorer-old.helium.com/blocks/1731335).
 - The first Oracled Proof of Coverage Reciepts were in
-  [block 1,731,339](https://explorer.helium.com/blocks/1731339).
+  [block 1,731,339](https://explorer-old.helium.com/blocks/1731339).
 - [Bitter Concrete Parakeet](https://explorer-old.helium.com/validators/12xtDibQdaAsvbPTqFbecGaA4iHd7NzRg6s7foQ2HCxouHo11TE)
   is the animal name of the Injector Oracle for Oracled PoC.
 
