--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -15,11 +15,11 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 The Helium Token is the native cryptocurrency and protocol token of the Helium Network. Its symbol
 is HNT. Prior to the launch of the Helium Network, there was no premine of HNT. The first HNT was
 produced on July 29th, 2019 on
-[block 93](https://explorer.helium.com/txns/sEP-cbb2tvSrfbBleT21yGDNM8FIjNr3UT3k3BeZELw).
+[block 93](https://explorer-old.helium.com/txns/sEP-cbb2tvSrfbBleT21yGDNM8FIjNr3UT3k3BeZELw).
 
 :::info For statistics on HNT
 
-[See the Market section on the Helium Explorer](https://explorer.helium.com/market).
+[See the Market section on the Helium Explorer](https://explorer-old.helium.com/market).
 
 :::
 
@@ -42,7 +42,7 @@ plentiful for network needs but also relatively scarce, with a known maximum.
 
 ### Max Supply
 
-At launch [genesis block](https://explorer.helium.com/blocks/1), the Helium Network targeted
+At launch [genesis block](https://explorer-old.helium.com/blocks/1), the Helium Network targeted
 5,000,000 HNT per month. Since the community approval of
 [HIP-20](https://github.com/helium/HIP/issues/73), the Helium Network uses a two year halving
 schedule, resulting in a maximum HNT supply of 223,000,000 HNT.
