--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -38,7 +38,7 @@ witnessed your Hotspot as the new list directly correlates with mining rewards.
 
 :::
 
-The list you find in explorer.helium.com and the Helium app are a historical, cumulative set of
+The list you find in explorer-old.helium.com and the Helium app are a historical, cumulative set of
 Hotspots that your Hotspot has seen beacon. This list is based on 5 previous days of
 Proof-of-Coverage
 
