--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -124,8 +124,8 @@ update incorrectly.
 **Recommended Fix:** We recommend checking the API to confirm that the update never made it to the
 blockchain, then trying again.
 
-To check the API, first copy your Hotspot address. You can find this on explorer.helium.com, enter
-the Hotspot name, then click on the clipboard icon next to the name.
+To check the API, first copy your Hotspot address. You can find this on explorer-old.helium.com,
+enter the Hotspot name, then click on the clipboard icon next to the name.
 
 <img src={useBaseUrl('img/wallets/helium-app/copy-icon.png')} />
 
