--- a/devblog/2021-05-06-post-mortem-2021-05-05-long-election.mdx
+++ b/devblog/2021-05-06-post-mortem-2021-05-05-long-election.mdx
@@ -45,9 +45,9 @@ the current group is unable to fulfill its duties. A Rescue Block can also conta
 updates in case a chain variable change is what is causing a Consensus issue.
 
 Throughout the Helium blockchain's 830,000+ blocks, Rescue Blocks have only been used on three prior
-occasions ([11578](https://explorer.helium.com/blocks/11578),
-[22462](https://explorer.helium.com/blocks/22462) and
-[22508](https://explorer.helium.com/blocks/22508)). In this instance, the issue was identified
+occasions ([11578](https://explorer-old.helium.com/blocks/11578),
+[22462](https://explorer-old.helium.com/blocks/22462) and
+[22508](https://explorer-old.helium.com/blocks/22508)). In this instance, the issue was identified
 quickly, diagnosed correctly, and the community assembled quickly to take action and restore network
 health.
 
