--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -27,8 +27,8 @@ With the deprecation of the Helium L1, changes to [API](/api/) and
 1. Existing ETL codebase: will no longer sync blocks.
 2. Existing API codebase: will no longer serve new data.
 3. api.helium.io (built on top of existing etl and api): will stay serving old data.
-4. explorer.helium.com (built on top of api.helium.io and other apis): will have data from the old
-   chain and be migrated to explorer-old.helium.com.
+4. explorer-old.helium.com (built on top of api.helium.io and other apis): will have data from the
+   old chain and be migrated to explorer-old.helium.com.
 
 What is new includes:
 
