--- a/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
+++ b/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
@@ -349,7 +349,7 @@ A dedicated and isolated router and console pair may disregard concerns about Pr
 hierarchical geospatial indexing system for computing distance, so dig there for any unique criteria
 or constraints. For previewing the hex for each pair of coordinates, use the live JavaScript feature
 of the underlying [API's documentation](https://h3geo.org/docs/api/indexing#geotoh3) with resolution
-of 8, and append the resulting value to: `https://explorer.helium.com/hotspots/hex/`.)
+of 8, and append the resulting value to: `https://explorer-old.helium.com/hotspots/hex/`.)
 
 Select latitude and longitude:
 
