updating more explorer links

--- a/docs/blockchain/mining.mdx
+++ b/docs/blockchain/mining.mdx
@@ -64,7 +64,7 @@ HNT. The math for this is as follows:
 
 ### What Are The Current Block and Epoch Times?
 
-At any point, you can go to the [Helium blockchain Explorer](http://explorer.helium.com/) to view
+At any point, you can go to the [Helium blockchain Explorer](https://explorer.helium.com/) to view
 recent block and epoch statistics, past HNT production numbers, and much more.
 
 ## HNT Distributions Per Epoch
