--- a/docs/lorawan-on-helium/lorawan-roaming-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-roaming-on-helium.mdx
@@ -10,10 +10,10 @@ slug: /lorawan-on-helium/lorawan-roaming-on-helium
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-The Helium Network is the [world's largest LoRaWAN Network](https://explorer.helium.com) - and
-continues to grow at a staggering pace. Because of this, it becomes a very attractive network to
-other public and private LoRaWAN Network Server providers (LNSs) who want to extend their coverage
-without deploying their own infrastructure and capital.
+The Helium Network is the world's largest LoRaWAN Network - and continues to grow at a staggering
+pace. Because of this, it becomes a very attractive network to other public and private LoRaWAN
+Network Server providers (LNSs) who want to extend their coverage without deploying their own
+infrastructure and capital.
 
 And thanks to the Helium blockchain, direct roaming integrations are very simple. Most importantly,
 major LNSs are roaming with the Helium Network, which means the public coverage the community is
