Removing Validator Pages (#1285)
* removing validator pages, images and sidebar sections

* sidebar cleanup

* removing cross links

* redirect for all docs goes to migration guide

* cutting out validator references

* more validator references removed

* restore files from feedback

* feedback revisions

* update explorer to explorer-old domain

* updating more explorer links

* move image file

--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -33,9 +33,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
             <a href="/mine-hnt/understanding-hotspot-status">
               <span class="badge badge--secondary">Understanding Hotspot Status</span>
             </a>
-            <a href="/mine-hnt/validators">
-              <span class="badge badge--secondary">Run a Validator</span>
-            </a>
           </div>
         </div>
       </div>
@@ -87,8 +84,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <div>
         <h3>Light Hotspots</h3>
         <p style={{ marginBottom: 40 }}>
-          These Hotspots use Validators to get information about the HNT blockchain, Participate in
-          Proof of Coverage rewards, and get rewarded for forwarding Data Packets. Details{' '}
+          These Hotspots participate in Proof of Coverage rewards, and get rewarded for forwarding
+          Data Packets. Details{' '}
           <a href="https://docs.helium.com/hotspot-makers/light-hotspots">can be found here</a>.
         </p>
       </div>
@@ -97,8 +94,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <div>
         <h3>Data Only Hotspots</h3>
         <p style={{ marginBottom: 40 }}>
-          These Hotspots use Validators to get information about the HNT blockchain, and get
-          rewarded for forwarding Data Packets. Details{' '}
+          These Hotspots get rewarded for forwarding Data Packets. Details{' '}
           <a href="https://docs.helium.com/mine-hnt/data-only-hotspots">can be found here</a>.
         </p>
       </div>
@@ -110,34 +106,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
           Makers have their own App to perform Hotspot onboarding, diagnostics, and troubleshooting.{' '}
           <a href="/hotspot-makers/maker-apps">Read more here</a>
         </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="container" style={{ padding: 0, marginBottom: 60 }}>
-  <div class="row">
-    <div class="col col--12">
-      <div class="flex">
-        <img className="headericon" src={useBaseUrl('img/validators/runvalidator.png')} />
-        <div className="headertext">
-          <h1 style={{ marginTop: 0 }}>Validators</h1>
-          <h2 className="subtitle">
-            Validators confirm blocks transactions are valid and properly placed on the chain. They
-            also serve block chain data to Light and Data Only Hotspots.
-          </h2>
-          <div>
-            <a href="/mine-hnt/validators/mainnet/deployment-guide">
-              <span class="badge badge--secondary">Deployment Guide</span>
-            </a>
-            <a href="/mine-hnt/validators/requirements/">
-              <span class="badge badge--secondary">Requirements</span>
-            </a>
-            <a href="/mine-hnt/validators/penalties">
-              <span class="badge badge--secondary">Penalties</span>
-            </a>
-          </div>
-        </div>
       </div>
     </div>
   </div>
