--- a/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
+++ b/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
@@ -328,10 +328,9 @@ echo $P2P
 
 Choose a hexagon for each gateway instance.
 
-Because this is a test router yet each gateway's location must be asserted onto
-[mainnet](/mine-hnt/validators/#mainnet) blockchain, pick a bogus location such as middle of a lake
-or river. (While there could be legitimate _devices_ in a particular body of water, there is
-unlikely to be a hotspot there as well.)
+Because this is a test router yet each gateway's location must be asserted onto mainnet blockchain,
+pick a bogus location such as middle of a lake or river. (While there could be legitimate _devices_
+in a particular body of water, there is unlikely to be a hotspot there as well.)
 
 > The importance of asserting a location for each hotspot:
 >
@@ -350,7 +349,7 @@ A dedicated and isolated router and console pair may disregard concerns about Pr
 hierarchical geospatial indexing system for computing distance, so dig there for any unique criteria
 or constraints. For previewing the hex for each pair of coordinates, use the live JavaScript feature
 of the underlying [API's documentation](https://h3geo.org/docs/api/indexing#geotoh3) with resolution
-of 8, and append the resulting value to: `https://explorer.helium.com/hotspots/hex/`.)
+of 8, and append the resulting value to: `https://explorer-old.helium.com/hotspots/hex/`.)
 
 Select latitude and longitude:
 
