--- a/docs/home/home.mdx
+++ b/docs/home/home.mdx
@@ -67,8 +67,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         produce and are compensated in IOT, the native cryptocurrency of the Helium blockchain. The
         Helium blockchain is a new, open source, public blockchain created entirely to incentivize
         the creation of physical, decentralized wireless networks. Today, the Helium IoT Network,
-        and its <a href="https://explorer.helium.com/hotspots">hundreds of thousands of Hotspots</a>,
-        provide access to the largest LoRaWAN Network in the world.
+        and its <a href="https://explorer.helium.com/">hundreds of thousands of Hotspots</a>, provide
+        access to the largest LoRaWAN Network in the world.
       </p>
       <p>
         If, at any time, you don't find what you need, join us in{' '}
@@ -103,9 +103,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       </a>
       <a className="block" href="/blockchain/proof-of-coverage">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Proof of Coverage
-      </a>
-      <a className="block" href="/blockchain/consensus-protocol">
-        <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Consensus Protocol
       </a>
       <a className="block" href="/blockchain/transaction-fees">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Transaction Fees
