Update maker-apps.mdx (#1289)
* Update maker-apps.mdx

Edits to include missing info and remove makers that are not MCC approved.

* Update maker-apps.mdx

* small cleanup

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -104,7 +104,7 @@ New makers are required to have a Maker App available before HIP 19 maker approv
 
 ---
 
-### Bobcat
+### Bobcat (Bobber)
 
 - Discord : https://discord.gg/2Barf528uj
 - iOS App: https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1595267515
@@ -204,7 +204,7 @@ FreedomFi Hotspots can now use the Helium Hotspot App to onboard and manage
 
 - Discord : https://discord.gg/Pt85TrZfxZ
 - iOS App: https://apps.apple.com/app/heltec-hotspot/id6444391876
-- Android App: Download from Maker-Apps page
+- Android App: https://heltec.org/maker-app/
 
 ---
 
@@ -212,7 +212,7 @@ FreedomFi Hotspots can now use the Helium Hotspot App to onboard and manage
 
 - Discord : https://discord.gg/wUk9nfFGZW
 - iOS App: https://apps.apple.com/app/hummingbird-hotspot/id1612429261
-- Android App: [Download from Maker-Apps page](https://xdt.com/app.html)
+- Android App: https://www.xdt.com/app.html
 
 ---
 
@@ -243,11 +243,10 @@ FreedomFi Hotspots can now use the Helium Hotspot App to onboard and manage
 
 - Discord : https://discord.gg/n3E3gvZr6b
 - Local Dashboard: http://dashboard.longap.com/
-- Maker apps: The LongAP recommendation is to use the Linxdot Maker App
 
 ---
 
-### MerryIoT
+### MerryIoT (Browan)
 
 - iOS App: https://apps.ios.com/us/app/merryiot-hotspot/id1615538142
 - Android App: https://play.google.com/store/apps/details?id=com.merryiot.makerapp
@@ -291,18 +290,6 @@ for the Hotspotty Connect apps which should be used with all MNTD and RAK Wirele
 
 ---
 
-### omSquare
-
-- Discord : https://discord.gg/BZPShbNXYb
-
-:::note This Maker has not yet submitted an App for inclusion on this page.
-
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-:::
-
----
-
 ### OPTION
 
 :::note This Maker has not yet submitted an App for inclusion on this page.
@@ -318,16 +305,6 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - Discord : https://discord.gg/dyJf8DD
 - Android App: https://play.google.com/store/apps/details?id=com.osprey.electronics
 - iOS App: https://apps.apple.com/us/app/osprey-electronics-hotspot/id1616301064
-
-:::note This Maker has not yet submitted an App for inclusion on this page.
-
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-:::
-
----
-
-### OXIT
 
 :::note This Maker has not yet submitted an App for inclusion on this page.
 
@@ -398,7 +375,7 @@ https://www.nebra.com/blogs/news/nebra-providing-updates-for-pycom-hotspots
 
 ---
 
-### SenseCAP
+### SenseCAP (Seeed)
 
 - Discord : https://discord.gg/QqMgVwHT3X
 - iOS App: https://apps.apple.com/us/app/sensecap-hotspot/id1600051150
@@ -411,26 +388,6 @@ https://www.nebra.com/blogs/news/nebra-providing-updates-for-pycom-hotspots
 
 Nebra have taken over support for SyncroB.it hotspots Please read the annoucement.
 https://www.nebra.com/blogs/news/syncrobit-hotspots-join-nebra-family
-
----
-
-### Tektelic
-
-:::note This Maker has not yet submitted an App for inclusion on this page.
-
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-:::
-
----
-
-### TMG
-
-:::note This Maker has not yet submitted an App for inclusion on this page.
-
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-:::
 
 ---
 
