--- a/docs/solana/migration-faq.mdx
+++ b/docs/solana/migration-faq.mdx
@@ -5,7 +5,7 @@ pagination_label: Migration FAQ
 sidebar_label: Migration FAQ
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /solana/migration/faq
+slug: /solana/migration-faq
 ---
 
 # FAQ - Solana Migration
@@ -106,9 +106,12 @@ You can find the explanation for the two in the Helium Docs:
 Here are 2 ways you can get your new Helium address:
 
 1. In the Helium Wallet app, Settings > Copy Address > Solana.
-2. Using another service Foundation is providing, you can go to
-   `https://migration.web.helium.io/helium/<HNT-Wallet-Address>` and it will return your new
+2. Using another service Foundation is providing, you can go to this URL and it will return your new
    address.
+
+   ```url
+   https://migration.web.helium.io/helium/<HNT-Wallet-Address>
+   ```
 
 ## How Can I Fix Hotspots Missing On The Helium Wallet App?
 
